styles.css
* {
    text-align: center;
    margin: 0;
    padding: 0;
}

div {
    margin: 20px 40px;
}

body {
    background-color: lightsteelblue;
    font-size: 1.5em;
    min-height: 100vh;
}
.picture {
    width:50%;
    border-radius: 10px;
    box-shadow: 5px 5px 5px black;
}
.cat-container{
    position: relative;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    margin: 0;
}
.cat{
    position: relative;
    display: flex;
    --startPositionY: 100vh;
    --startPositionX: 100vw;
    --endPositionY: -50vh;
    --endPositionX: -50vw;
    --speed: 5s;
}
.cat span {
    position: absolute;
    width: 290px;
    height: 290px;
    background-size: contain;
    background-image: url("17364.jpg");
    margin: 0 4px;
    border-radius: 50%;
    animation: animate var(--speed) linear infinite;
    z-index: -100;

}
.cat span.lupin {
    background-image: url("221.jpeg");
    background-repeat: no-repeat;
    width: 100px;
    height: 100px;
    background-size: cover;

}
@keyframes animate {
    0%
    {
    transform: translateY(var(--startPositionY)) translateX(var(--startPositionX));

    }
    100%
    {
    transform: translateY(var(--endPositionY)) translateX(var(--endPositionX));
    }
}
p {
    padding: 0 25px;
}

.about-me {
    border: 2px solid black;
    background-color: whitesmoke;
   
}

.stack-container{
    border: 2px solid black;
    background-color: whitesmoke;

}
.tech-stack {
    display:flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-left: 0;
    margin-right: 0;
}
ul {
    list-style: none;
    padding: 10px 0px;
    flex: 1;

}

.projects-container{
    border: 2px solid black;
    background-color: whitesmoke;
}
.projects-container img {
    height: 150px; 
    width: 150px;
}
.projects {
    display: flex;
    justify-content: space-evenly;
    background-color: whitesmoke;
}
/* #dobby {
    animation: 7s infinite linear slidein;
    rotate: -30deg;
} */

@keyframes slidein {
    0% {
        transform: translate(0);
      }
      100% {
        transform: translate(-3840px);
      }
    }
@media (max-width: 500px) {
    div {
      margin: 10px;
    }
    img {
        width: 100%;
        height: 100%;
    }
    .projects, .tech-stack {
        flex-direction: column;
        align-items: center;
    }
    .cat span {
        width: 50%;
        height: 50%;
    }
  }

